--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 <body>
     <main class="container">
         <section class="input">
-            <input type="color" name="color-input" id="color-input">
-            <select name="colors" id="color-options">
+            <input 
+                type="color" 
+                name="color-input" 
+                id="color-input"
+                class="color__input" 
+            />
+            <select 
+                name="options" 
+                id="input-options"
+                class="input__options" 
+            >
                 <option value="monochrome" name="monochrome">Monochrome</option>
                 <option value="monochrome-dark" name="monochrome-dark">Monochrome-dark</option>
                 <option value="monochrome-light" name="monochrome-light">Monochrome-light</option>
@@ -20,26 +29,32 @@
                 <option value="triad" name="triad">Triad</option>
                 <option value="quad" name="quad">Quad</option>
             </select>
-            <button onclick="showColors()" id="color-btn">Get Color Scheme</button>
+            <button 
+                onclick="showColors()"
+                id="input-btn"
+                class="input__button"
+            >
+                Get Color Scheme
+            </button>
         </section>
         <section class="output">
-            <div class="colors">
+            <div class="output__color">
                 <div class="color"></div>
                 <p class="hex"></p>
             </div>
-            <div class="colors">
+            <div class="output__color">
                 <div class="color"></div>
                 <p class="hex"></p>
             </div>
-            <div class="colors">
+            <div class="output__color">
                 <div class="color"></div>
                 <p class="hex"></p>
             </div>
-            <div class="colors">
+            <div class="output__color">
                 <div class="color"></div>
                 <p class="hex"></p>
             </div>
-            <div class="colors">
+            <div class="output__color">
                 <div class="color"></div>
                 <p class="hex"></p>
             </div>
