--- a/index.html
+++ b/index.html
@@ -39,24 +39,24 @@
         </section>
         <section class="output">
             <div class="output__color">
-                <div class="color"></div>
-                <p class="hex"></p>
+                <div class="color" id="color-value#1"></div>
+                <p class="hex" id="hex-value#1"></p>
             </div>
             <div class="output__color">
-                <div class="color"></div>
-                <p class="hex"></p>
+                <div class="color" id="color-value#2"></div>
+                <p class="hex" id="hex-value#2"></p>
             </div>
             <div class="output__color">
-                <div class="color"></div>
-                <p class="hex"></p>
+                <div class="color" id="color-value#3"></div>
+                <p class="hex" id="hex-value#3"></p>
             </div>
             <div class="output__color">
-                <div class="color"></div>
-                <p class="hex"></p>
+                <div class="color" id="color-value#4"></div>
+                <p class="hex" id="hex-value#4"></p>
             </div>
             <div class="output__color">
-                <div class="color"></div>
-                <p class="hex"></p>
+                <div class="color" id="color-value#5"></div>
+                <p class="hex" id="hex-value#5"></p>
             </div>
         </section>
     </main>
